--- a/action-a/Dockerfile
+++ b/action-a/Dockerfile
@@ -2,4 +2,4 @@ FROM debian:9.5-slim
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
-ENTRYPOINY ["/entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
